<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tltms.driver.signUp.SignUpActivity">

    <include layout="@layout/toolbar_layout" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:text="配载信息"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/frame_search"
        android:layout_marginRight="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvLdOrderNo"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/originCity"
                style="@style/LoadingOrderStyle"
                android:layout_marginLeft="0dp"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/destCity"
                style="@style/LoadingOrderStyle"
                android:layout_marginLeft="0dp"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edtTotalPackageQty"
                style="@style/LoadingOrderStyle"
                android:layout_marginLeft="0dp"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/edtTotalVolume"
                style="@style/LoadingOrderStyle"
                android:layout_marginLeft="15dp"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="" />
            <TextView
                android:id="@+id/edtTotalWeight"
                style="@style/LoadingOrderStyle"
                android:layout_marginLeft="15dp"
                android:textColor="@color/color_black"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edtSignMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_search_normal"
        android:hint="@string/hintSignMan" />

    <EditText
        android:id="@+id/edtIdCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:background="@drawable/frame_search_normal"
        android:hint="@string/hintIdCard" />

    <Button
        android:id="@+id/btnSignDate"
        android:textColor="@color/royalblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_search_normal"
        android:gravity="left|center"
        android:hint="@string/hintSignDate" />

    <EditText
        android:id="@+id/edtRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_black"
        android:background="@drawable/frame_search_normal"
        android:hint="@string/hintReMark" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cbException"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cbException" />

    <LinearLayout
        android:id="@+id/layoutException"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Spinner
            android:id="@+id/spException"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/edtException"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_search_normal"
            android:hint="@string/hintException" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnChoosePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChoosePic" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit" />

    </LinearLayout>


    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:fadingEdge="none"
        android:focusable="false"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:padding="8dp"
        android:verticalSpacing="2dp" />


</LinearLayout>
